added language tag to translations

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,11 +1,9 @@
 <div class="home-page">
     <span class="welcome-message col-xs-12">Welcome to LingoZen</span>
-    <span class="welcome-message-2 col-xs-12">All hope abandon ye who enter here</span>
-
 
     <div class="search-bar-button-container">
         <input ng-model="searchQuery.query" type="text" class="form-control"
-               placeholder="Type here to start searching">
+               placeholder="Type to start searching">
         <button ng-click="addSentence()"> ADD </button>
     </div>
 
